--- a/crtl.vcxproj
+++ b/crtl.vcxproj
@@ -88,6 +88,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <IgnoreStandardIncludePath>false</IgnoreStandardIncludePath>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -150,6 +151,8 @@
     <ClCompile Include="stdio.c" />
     <ClCompile Include="stdlib.c" />
     <ClCompile Include="string.c" />
+    <ClCompile Include="test_stdlib.c" />
+    <ClCompile Include="test_string.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="assert.h" />
@@ -158,6 +161,7 @@
     <ClInclude Include="stdio.h" />
     <ClInclude Include="stdlib.h" />
     <ClInclude Include="string.h" />
+    <ClInclude Include="test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
