--- a/crtl.vcxproj
+++ b/crtl.vcxproj
@@ -158,6 +158,7 @@
   <ItemGroup>
     <ClInclude Include="assert.h" />
     <ClInclude Include="ctype.h" />
+    <ClInclude Include="errno.h" />
     <ClInclude Include="stddef.h" />
     <ClInclude Include="stdio.h" />
     <ClInclude Include="stdlib.h" />
