--- a/crtl.vcxproj
+++ b/crtl.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="assert.h" />
     <ClInclude Include="ctype.h" />
     <ClInclude Include="errno.h" />
+    <ClInclude Include="stdarg.h" />
     <ClInclude Include="stddef.h" />
     <ClInclude Include="stdio.h" />
     <ClInclude Include="stdlib.h" />
