fixed itoa impl, strrev name

--- a/crtl.vcxproj
+++ b/crtl.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClCompile Include="assert.c" />
     <ClCompile Include="ctype.c" />
+    <ClCompile Include="errno.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="stdio.c" />
     <ClCompile Include="stdlib.c" />
